<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchBar"
        android:title="@string/search"
        android:icon="@drawable/icon_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/icon_shopping_cart"
        app:showAsAction="ifRoom"
        android:actionLayout="@layout/menu_item"/>

    <item
        android:id="@+id/viewSelector"
        android:title="@string/search"
        android:icon="@drawable/icon_view_1"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/settings"
        android:title="@string/clearCart"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/logoutButton"
        android:title="@string/logout"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView"
        android:orderInCategory="2"/>
</menu>