<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:text="@string/orderSubtitle"
            android:fontFamily="casual"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:listitem="@layout/row_cartitem"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <RelativeLayout
            android:id="@+id/prizesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/totalPrizeSubtitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/totalPrizeSubtitle"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/totalPrizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:text="@string/totalPrize"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:layout_alignParentEnd="true"
                android:textColor="@color/red"/>

            <Button
                android:id="@+id/orderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:onClick="order"
                android:text="@string/order"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:layout_below="@+id/totalPrizeTextView"/>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>